--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   location: 1.4.1
   dio: ^3.0.3
   onesignal_flutter: ^2.1.0
+  flare_flutter: 1.6.2
+
 
 
 dev_dependencies:
@@ -21,5 +23,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
+
+  assets:
+    - assets/flare.flr
+    - assets/Animals.flr
