--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   location: 1.4.1
   dio: ^3.0.3
   onesignal_flutter: ^2.1.0
+  material_design_icons_flutter: ^3.2.4595
   flare_flutter: 1.6.2
   intro_views_flutter:
 
@@ -29,4 +30,6 @@ flutter:
 
   assets:
     - assets/flare.flr
+    - assets/marcador.flr
     - assets/234049726023202.jpg
+    - assets/ProcessingLogo.flr
